# python-collection

./: README.md  main.py  prompt.md  pyproject.toml  概率模型.md  特征工程.md
agent_mod/: README.md  a2a.py  langchain.py  langgraph.py  prompt.py  transformers.py
ai-agent/: .env  .env.bak  README.md  main.py  test.py
base_mod/: cli.py  gui.py  pydantic.py  web.py
database/: mysql8_Test.py  sqlite3_test.py
db-demo/: sqlite3.db  test.py
deep-learning/: lstm.py
dlib-demo/: README.md  face_recognition_demo.py  人脸抓拍.py  目标跟踪.py
gui-demo/: README.md  simplegui.py  untitled.ui
jupyter/: matplotlib.ipynb  numpy.ipynb  常用技巧.ipynb
langchain-demo/: README.md  demo.py  demo1.py
mediapipe/: Mediapipe姿态识别.py  Mediapipe手势识别.py
mediapipe-demo/: Mediapipe手势识别.py  README.md  face_detection.py  objectron.py  selfie_segmentation.py  人脸识别.py  手部关键点检测.py  面部关键点识别.py  音频特征提取.py
ml_mod/: __init__.py  doit.py  jax.py  numpy.ipynb  numpy.py  pandas.ipynb  scikit.ipynb  tensorflow.py  torch.py  ts.py
network/: main.py
nlp_mod/: __init__.py
notebook/: numpy.ipynb  oop.py  常用技巧.ipynb
ocr/: tesseractTest.py  tesserocrTest.py
opencv-demo/: README.md  目标跟踪.py
opengl-demo/: demo.py
prophet-demo/: README.md
qt-demo/: QtTimer.py
scikit-demo/: demo.py  isolation_forest_demo.py  scikit.ipynb
scikit-learn-demo/: scikit.ipynb
selenium/: base.py  login_test.py
sip-demo/: README.md  pjsua2_demo.py
spark-demo/: README.md  spark.ipynb
spider/: B站视频爬取（普通版）.py  小说爬取.py  爬取豆瓣Top250电影信息.py
supervision-demo/: foo.py
web-demo/: README.md
yolo-demo/: README.md  yolo.py  (+2 more)
(+52 files in other folders)
